[package]
name = "ifascript"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "IfáScript Ω — Divination as Divine Computation"
repository = "https://github.com/YOUR_USERNAME/ifascript"
keywords = ["ifá", "esoteric", "vm", "yoruba", "divination"]
categories = ["compilers-interpreters", "no-std"]

[lib]
crate-type = ["cdylib", "lib"]  # for future WASM

[dependencies]
lazy_static = "1.4"
rand = "0.8"
rand_chacha = "0.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
hex = "0.4"
sha2 = "0.11.0"

[dev-dependencies]
