[package]
name = "ifascript"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "IfáScript Ω — Divination as Divine Computation"
repository = "https://github.com/Bino-Elgua/Ifascript"
keywords = ["ifá", "esoteric", "vm", "yoruba", "divination"]
categories = ["compilers-interpreters", "no-std"]

[lib]
crate-type = ["cdylib", "lib"]  # for future WASM

[[bin]]
name = "cast_state"
path = "src/bin/cast_state.rs"

[[bin]]
name = "ifa"
path = "src/bin/ifa.rs"

[dependencies]
lazy_static = "1.4"
rand = "0.8"
rand_chacha = "0.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha2 = "0.10"
sha3 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
log = "0.4"
clap = { version = "4.4", features = ["derive"] }
pest = "2.7"
pest_derive = "2.7"
lru = "0.12"

[dev-dependencies]
